Fixed blog title spacing

--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@
 }
 
 @media (max-width: 1000px) {
-	.section-title {
+	.section-title,
+	.blog-title {
 		padding: 4em 0 0 0;
 		margin: 0;
 	}
